test/trivial/deitz/coerce-assign/illegal_cast.good
illegal_cast.chpl:7: error: illegal cast from borrowed C to int(64)
