test/trivial/deitz/coerce-assign/illegal_cast.chpl
class C {
  var x: int;
}

var c = new borrowed C(2);

writeln(c:int);
